--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     
         /* Media query for small devices, such as phones */
         @media screen and (max-width: 480px) {
+            body {
+             font-size: 10px;
+            }
             .direction-btn {
                 font-size: 20px;
                 padding: 15px 30px;
